- Mech Shooting Implemented
- Will proceed damage indicator

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -50,6 +50,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Test_Button",Key=Eight,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Test_Button",Key=Nine,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Test_Button",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponSwitching",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponSwitching",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
@@ -69,6 +71,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=-1.000000)
 +AxisMappings=(AxisName="CameraZoom",Key=MouseWheelAxis,Scale=-1.000000)
 +AxisMappings=(AxisName="CameraZoom",Key=V,Scale=-10.000000)
++AxisMappings=(AxisName="FireCurrentWeapon",Key=LeftMouseButton,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
