--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,27 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+TransitionMap=/Game/Maps/TravelMap.TravelMap
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=null
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
