--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -52,6 +52,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Test_Button",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="WeaponSwitching",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="WeaponSwitching",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ZoomAim",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwitchCamera",Key=V,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
@@ -70,7 +72,6 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=-1.000000)
 +AxisMappings=(AxisName="CameraZoom",Key=MouseWheelAxis,Scale=-1.000000)
-+AxisMappings=(AxisName="CameraZoom",Key=V,Scale=-10.000000)
 +AxisMappings=(AxisName="FireCurrentWeapon",Key=LeftMouseButton,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
