--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -73,6 +73,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=-1.000000)
 +AxisMappings=(AxisName="CameraZoom",Key=MouseWheelAxis,Scale=-1.000000)
++AxisMappings=(AxisName="FireLaserWeapon",Key=LeftMouseButton,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
