--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Saved
 *.xcworkspace
 Content/Blockout/TerrainMaterial.uasset
 Content/HP_Test_Folder/Blueprints/Mech/CurrentMech.uasset
+Content/HP_Test_Folder/Blueprints/Mech/CurrentMech.uasset
+Content/Weapons/Laser_1_PhysicsAsset.uasset
+Content/Weapons/Laser_1_Skeleton.uasset
