--- a/Reactor_Commander.uproject
+++ b/Reactor_Commander.uproject
@@ -32,6 +32,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "PerformanceMonitor",
+			"Enabled": true
 		}
 	]
 }
