--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A9543CF24DDEB455EF1290BA82C18A0B
+ProjectName=Reactor Commander
+CompanyName=Gameka SdnBhd
+CompanyDistinguishedName=Dead Straight Studios
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8F1455BA45AE037DEA5B55A2C6F93B66", "Reactor Commander")
+
