--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,9 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMenu.MainMenu
-ServerDefaultMap=/Game/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Blockout/HangarMenu.HangarMenu
+ServerDefaultMap=/Game/Blockout/HangarMenu.HangarMenu
+GameDefaultMap=/Game/Blockout/HangarMenu.HangarMenu
 TransitionMap=/Game/Maps/TravelMap.TravelMap
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
@@ -67,5 +67,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
