--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ EditorStartupMap=/Game/Blockout/HangarMenu.HangarMenu
 ServerDefaultMap=/Game/Blockout/HangarMenu.HangarMenu
 GameDefaultMap=/Game/Blockout/HangarMenu.HangarMenu
 TransitionMap=/Game/Maps/TravelMap.TravelMap
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/MainMenu_GUI/MainMenu_New_GM.MainMenu_New_GM_C
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
 
 [/Script/Engine.GameEngine]
