--- a/Reactor_Commander.uproject
+++ b/Reactor_Commander.uproject
@@ -37,6 +37,14 @@
 			"Name": "DonAINavigation",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/81b4bd085c8c41508edfeb160b6ddf62"
+		},
+		{
+			"Name": "AdvancedSessions",
+			"Enabled": false
+		},
+		{
+			"Name": "AdvancedSteamSessions",
+			"Enabled": false
 		}
 	]
 }
