enable back advanced session

--- a/Reactor_Commander.uproject
+++ b/Reactor_Commander.uproject
@@ -40,11 +40,11 @@
 		},
 		{
 			"Name": "AdvancedSessions",
-			"Enabled": false
+			"Enabled": true
 		},
 		{
 			"Name": "AdvancedSteamSessions",
-			"Enabled": false
+			"Enabled": true
 		}
 	]
 }
